--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@t3-oss/env-nextjs": "^0.7.1",
-		"ai": "^2.2.27",
+		"ai": "^3.0.9",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.0.0",
 		"framer-motion": "^10.16.12",
 		"lucide-react": "^0.294.0",
-		"next": "13.5.5-canary.17",
-		"openai": "^4.20.1",
+		"next": "^14.0.3",
+		"openai": "^4.24.1",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-markdown": "^9.0.1",
